Fix issue with hardware section width on tablets

--- a/wp-content/themes/betheme-child/style.css
+++ b/wp-content/themes/betheme-child/style.css
@@ -200,6 +200,10 @@ select:focus {
   font-family: "DM Sans"!important;
 }
 
+#hardware .tablet-two-third.column {
+  width: 100% !important;
+}
+
 .gradient-bg {
   width: 100vw;
   height: 100vh;
